Toegevoegd afbeelding en tekst

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -53,7 +53,7 @@
             <div class="content">
                 <div class="row-content">
                     <div class="box-rightimg">
-                        <img src="images/wait_a_minute.jpg" alt="Camiel Nijman" height="250px" width="250px">
+                        <img src="images/CamielN/camiel_nijman.png" alt="Camiel Nijman" height="250px" width="250px">
                         <h6>About me</h6>
                         <blockquote>
                             <p> 
@@ -63,8 +63,8 @@
                         <div class="small-box">
                             <p>
                                 Student: Camiel Nijman
-                                Studentennummer: 
-                                Bachelor: 
+                                Studentennummer: 1637897
+                                Bachelor: HBO-ICT ESD
                                 Minor: Smart Industry
                             </p>
                         </div>
@@ -91,7 +91,7 @@
                         <h6>Leerdoel 1</h6>
                         <blockquote>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                Ik wil meer vanuit mijzelf contact opnemen met stakeholders via teams of email en hiermee ook efficienter omgaan.
                             </p>
                         </blockquote>
                     </div>
@@ -100,7 +100,7 @@
                         <h6>Leerdoel 2</h6>
                         <blockquote>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                Ik wil meer te weten komen over de processen die spelen binnen een bedrijf buitenom het ontwikkelen van een applicatie.
                             </p>
                         </blockquote>
                     </div>
@@ -150,6 +150,7 @@
             </section>
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0yJRqj1i3BErDy4F44xrlr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 <div class="content"></div>
             </section>
         </section>
