--- a/Portfolio-Nathan-van-der-Veer.html
+++ b/Portfolio-Nathan-van-der-Veer.html
@@ -43,6 +43,14 @@
                             <li><a href="#workshops-smart-connection">Smart Connection</a></li>
                         </ul>
                     </li>
+                    <li><a href="#Eyeopeners">Eyeopeners</a>
+                        <ul class="sub-level">
+                            <li><a href="#Eyeopeners-Verbredend verdiepen">Verbredend verdiepen</a></li>
+                            <li><a href="#Eyeopeners-2">2</a></li>
+                            <li><a href="#Eyeopeners-3">3</a></li>
+                            <li><a href="#Eyeopeners-4">4</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -91,7 +99,7 @@
                         <h6>Leerdoel 1</h6>
                         <blockquote>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                Invulling geven aan innovatieprojecten. Concrete doelen stellen en leren van de project aanpak van mijn peers. 
                             </p>
                         </blockquote>
                     </div>
@@ -100,7 +108,15 @@
                         <h6>Leerdoel 2</h6>
                         <blockquote>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                Meer inzicht opdoen met software development in het kader van technische systemen.
+                            </p>
+                        </blockquote>
+                    </div>
+                    <div class="box-onlytext">
+                        <h6>Leerdoel 1</h6>
+                        <blockquote>
+                            <p>
+                                Multidisciplinair verdiepen, motivatie vanwege eyeopener (zie…)
                             </p>
                         </blockquote>
                     </div>
@@ -152,6 +168,42 @@
                 <h3>Smart connection</h3>
                 <div class="content"></div>
             </section>
+        </section>
+        <section id="Eyeopeners">
+            <h1>Eyeopeners</h1>
+            <div class="content">
+                <div class="row-content">
+                    <div class="box-rightimg">
+                        <h6>Verbredend verdiepen</h6>
+                        <blockquote>
+                            <p> 
+                                Deze eyeopener kreeg ik aan de start van het bedrijfsproject, toen we het met mijn projectgroepje hadden over elkaars expertises, competenties en raakvlakken met de projectopdracht. Verder hadden we het over groeien in verschillende disciplines en waar we tot nu toe zelf al ervaring mee hadden opgedaan vanuit hobby, studie, werk en interesses.
+                                De eyeopener was; dat ik kan kiezen hoe ik me wil ontwikkelen in de technieksector, dit kan op verschillende manieren:
+                            <br>
+                                •	Mijzelf verbreden, dan kan ik straks alles een beetje maar ik ben al redelijk breed georiënteerd dus dan ontbreek ik misschien specialisatie.
+                            <br>
+                                •	Verdiepen, mijzelf specialiseren binnen één discipline. Daarmee groeien van breed naar specialist (diep).
+                            <br>
+                                •	Verbredend verdiepend, dat als ik me wil verdiepen ik de mogelijkheid heb om dit niet alleen binnen een discipline van technisch vakgebied kan doen maar mijn focus en ontwikkeling verdeel over meerdere disciplines, verbredend verdiepend (wens). 
+                            <br><br>
+                                Dit beseft kwam omdat: Binnen mijn studierichting Werktuigbouwkunde ben ik van mijzelf altijd redelijk breed ben geweest. Dit is een sterke eigenschap omdat ik hiermee breed inzetbaar ben binnen mijn gekozen vakgebied. Voorbeelden hiervan zijn:
+                            <br>
+                                Via mijn werk heb ik al veel ervaring opgedaan in de (MKB) industriesector met ontwerpen/ontwikkelen van producten en werktuigen, doen van technisch onderzoek, begeleiden van projecten, werk in ontwikkelteems of zelfstandig op projectbasis, communiceren met klanten, leidinggevende en leveranciers.
+                            <br><br>
+                                Het project van deze minor is gefocust op verduurzaming, energietransitie, IOT systemen en netwerken. Dit is een hele andere discipline in vergelijking tot mijn huidige baan, waarin ik nog maar beperkte ervaring mee heb. Daarom is dit project een mooie kans om mijzelf multidisciplinair te verdiepen en te groeien.
+                            </p>
+                        </blockquote>
+                    </div>
+                    <div class="box-upperimg">
+                        <h6>Kleurentest</h6>
+                        <blockquote>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            </p>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <script src="js/app.js"></script>
